--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,29 @@
 /* this css file will only style the homepage of our site */
 
-.cat-photo {
+#ocean-photo {
   margin: 10px;
-  max-width: 500px;
+  padding: 10px;
+  max-width: 1300px;
+  
+}
+.minor-section{
+  background-color:#e298c8;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
+h1{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h2{
+  font-family: cursive;
+}
+
+#content{
+  background-color: #e298c8;
+}
+
+.digression{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: small
 }
