--- a/lab4/css/lab.css
+++ b/lab4/css/lab.css
@@ -2,8 +2,37 @@
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
-  }
+  padding: 10px;
+  margin-bottom: 10px;
+  color: #000000; 
+  background-color: #e298c8;
+  font-family: 'Times New Roman', Times, serif;
+  outline-style: dotted;
+  outline-color: #000000;
+}
+
+#output{
+  max-width:1000px;
+}
+
+body{
+  background-color: #e298c8;
+}
+
+h1{
+  color:#000000;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+h2{
+  color: #000000;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+#content{
+  background-color: #e298c8;
+}
+
+#peg-solitaire{
+  max-width: 40%;
+}
