--- a/lab6/css/lab.css
+++ b/lab6/css/lab.css
@@ -1,9 +1,38 @@
 /* Here we can set styles for this lab page that we don't want to effect others pages */
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+ .minor-section {
+  padding: 10px;
+  margin-bottom: 10px;
+  color: #000000; 
+  background-color: #e298c8;
+  font-family: 'Times New Roman', Times, serif;
+  outline-style: dotted;
+  outline-color: #000000;
+  }
+  
+  
+  body{
+    background-color: #e298c8;
+  }
+  
+  h1{
+    color:#000000;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  h2{
+    color: #000000;
+    font-family: 'Times New Roman', Times, serif;
+  }
+  
+  #content{
+    background-color: #e298c8;
+  }
+  
+  #ford-fusion{
+    max-width: 27%;
+    float: right;
+    padding-right: 10px;
+    padding-left: 10px;
   }
