--- a/lab10/css/lab.css
+++ b/lab10/css/lab.css
@@ -78,6 +78,7 @@ h2{
   
 .script:nth-child(even) {
     text-align: left;
+    margin-left: 10px;
 }
   
 .script:nth-child(even) p {
@@ -87,6 +88,7 @@ h2{
   
 .script:nth-child(odd) {
     text-align: right;
+    margin-right: 10px;
 }
   
 .script:nth-child(odd) p {
